--- a/src/Components/Item/Item.module.css
+++ b/src/Components/Item/Item.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   padding: 12px;
+  margin: 10px 0px;
   background-color: transparent;
   border: 2px solid grey;
   border-radius: 3px;
