--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -26,7 +26,8 @@ body {
 
 .titleWarning {
   font-size: 32px;
-  font-weight: 400;
+  font-weight: 500;
+  color: black;
   letter-spacing: 2px;
   text-transform: uppercase;
   text-align: center;
